# pia

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  ps.ps1  pyproject.toml
database/schema/: 00_layer0_mission.sql  01_layer0_source_authority.sql  01_setup_extensions.sql  03_layer2_uir.sql  03_layer2_uir_spine.sql  04_layer3_4_clusters.sql  04_layer3_analytics.sql  05_layer5_knowledge_graph.sql  06_functions_triggers.sql  06_system_heartbeat.sql  07_layer7_feedback.sql  full_schema.sql
docs/: STATUS.md  burmanlabs_master_plan.md  capabilities_demonstration.md  final_architecture_report.md  systematic_test_report.md
docs/architecture/: oia_vision_v1.md  pia_system_design_v2.md  (+1 more)
scripts/: bottleneck_investigation.py  bottleneck_investigation_v2.py  check_duplicates.py  check_epstein.py  check_graph.py  check_mcp_tools.py  clean_graph.py  diagnostic_resolution.py  engine_bootstrap_hq.py  final_semantic_fix.py  generate_synthetic_intel.py  init_db.sh  inspect_db.py  internal_test.py  maintenance.py  maintenance_decay.py  master_e2e_real.py  master_e2e_test.py  master_knowledge_seed.py  merge_entities.py  populate_embeddings.py  quick_embed.py  quick_inspect.py  release.py  reset_jobs.py  seed_epstein_anchors.py  seed_geo.ps1  seed_knowledge_graph.py  seed_target_deck.py  seed_wikidata5m.py  signal_storm.py  smoke_test_finance.py  smoke_test_real_world.py  smoke_test_spacex.py  stress_test.py  target_test.py  test_hardening.py  test_integrity.py  test_recursive_cte.py  test_rls_isolation.py  (+4 more)
tests/: conftest.py
(+48 files in other folders)
